<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="24dp"
		android:text="@string/title_manual"
		android:textColor="#000000"
		android:textSize="24sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="24dp"
		android:layout_marginRight="24dp"
		android:text="@string/para_manual"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<Button
		android:id="@+id/btnStart"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="24dp"
		android:layout_marginRight="24dp"
		android:text="@string/label_start"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<CheckBox
		android:id="@+id/checkZero"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="24dp"
		android:checked="true"
		android:text="@string/label_write_zero"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnStart" />

	<CheckBox
		android:id="@+id/checkOne"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="16dp"
		android:text="@string/label_write_one"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/checkZero" />

	<CheckBox
		android:id="@+id/checkRandom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="16dp"
		android:text="@string/label_write_random"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/checkOne" />
</androidx.constraintlayout.widget.ConstraintLayout>